--- a/Resume (Final).html
+++ b/Resume (Final).html
@@ -177,7 +177,7 @@
     </div>
     <div class="contact-info">
       <span class="email">Email: </span>
-      <span class="email-val"><a href="https://mail.google.com/mail/u/0/?tab=rm#inbox?compose=CllgCJlHmgJhPMRQkrWbbJNpvzXRGwsfxrJJkHVDspVcbKKDZQcPRxpSqWHZrXqSttGwFSvJPVV" target="_blank">anuparunaruna@gmail.com </a></span>
+      <span class="email-val"><a href="https://mail.google.com/" target="_blank">@gmail.com </a></span>
       <span class="separator"></span>
       <span class="phone">Phone: </span>
       <span class="phone-val">1234567890</span>
