--- a/UI table.html
+++ b/UI table.html
@@ -37,19 +37,19 @@ tr:hover {background-color: #B1FFFB;}
         <td>Male</td>
       <tr>
         <td><strong>Date of Birth</strong></td>
-        <td>20 December,2003</td>
+        <td>20 ,2003</td>
       </tr>
       <tr>
         <td><strong>Contact Number</strong></td>
-        <td>+91 9611659359</td>
+        <td>+91 0123456789</td>
       </tr>
       <tr>
         <td><strong>Email</strong></td>
-        <td><a href="https://mail.google.com/mail/u/0/?tab=rm#inbox?compose=CllgCJlHmgJhPMRQkrWbbJNpvzXRGwsfxrJJkHVDspVcbKKDZQcPRxpSqWHZrXqSttGwFSvJPVV">anuparunaruna@gmail.com</a></td>
+        <td><a href="https://mail.google.com/">@gmail.com</a></td>
       </tr>
 	  <tr>
         <td><strong>From</strong></strong></td>
-        <td>Davangere, Karnataka, India</td>
+        <td>Karnataka, India</td>
       </tr>      
     </tbody>
   </table>
